--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^1.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "node-sass": "^4.9.2",
+    "node-sass-json-importer": "^3.3.1",
+    "sass-loader": "^7.1.0",
     "webpack": "^4.16.3",
     "webpack-cli": "^3.1.0"
   },
